--- a/packages/websites/coffeekraken-io/src/views/layouts/footer/footer.css
+++ b/packages/websites/coffeekraken-io/src/views/layouts/footer/footer.css
@@ -5,15 +5,17 @@
     padding-inline: sugar.padding(50);
 
     svg {
-        height: 40px;
-        width: 120px;
+        height: 60px;
+        width:140px;
+        transform-origin: 0 50%;
+        transform: translate(-13px,0);
         margin-block-end: sugar.margin(30);
     }
     svg .main {
-        fill: sugar.color(accent);
+        fill: sugar.color(base, --darken 55);
     }
     svg .accent {
-        fill: sugar.color(base, --darken 55);
+        fill: sugar.color(accent);
     }
 
     @sugar.theme.when(dark) {
