--- a/packages/websites/coffeekraken-io/src/views/layouts/header/header.css
+++ b/packages/websites/coffeekraken-io/src/views/layouts/header/header.css
@@ -51,16 +51,23 @@
     }
 
     svg {
-        height: 44px;
-        width:120px;
+        height: 60px;
+        width:140px;
         transform-origin: 0 50%;
+        transform: translate(-10px,-5px);
+        
+        @sugar.media mobile {
+            position: relative;
+            top: 10px;
+        }
     }
 
+
     svg .main {
-        fill: sugar.color(accent);
+        fill: sugar.color(base, --darken 55);
     }
     svg .accent {
-        fill: sugar.color(base, --darken 55);
+        fill: sugar.color(accent);
     }
 
     @sugar.theme.when(dark) {
