--- a/packages/websites/coffeekraken-io/src/views/layouts/header/header.css
+++ b/packages/websites/coffeekraken-io/src/views/layouts/header/header.css
@@ -58,7 +58,7 @@
         
         @sugar.media mobile {
             position: relative;
-            top: 10px;
+            top: 0;
         }
     }
 
