--- a/packages/websites/coffeekraken-io/src/css/index.css
+++ b/packages/websites/coffeekraken-io/src/css/index.css
@@ -22,13 +22,15 @@ body {
     border: none !important;
 }
 
+.s-container {
+    @sugar.media(>=wide) {
+        @sugar.layout.container(wide);
+    }
+}
+
 .s-page-transition * {
     user-select: none;
     pointer-events: none !important;
-}
-
-.s-btn {
-    @sugar.depth (50);
 }
 
 .sticky {
