--- a/packages/websites/coffeekraken-io/src/views/layouts/header/header.css
+++ b/packages/websites/coffeekraken-io/src/views/layouts/header/header.css
@@ -13,7 +13,7 @@
     align-items: center;
     background: sugar.color(main, --alpha 0);
     transition: all sugar.theme(easing.default) 0.6s;
-    @sugar.depth (100);
+    @sugar.depth (10);
     background: sugar.color(main, surface);
     border-radius: sugar.border.radius();
     /* box-shadow: 5px 20px 30px rgba(0, 0, 0, 0.03); */
@@ -34,12 +34,20 @@
         align-items: center;
     }
 
+    @sugar.media(>=wide) {
+        width: calc(1640px + sugar.padding(30) * 2);
+    }
+
     &:not(#homepage &),
     body.scrolled & {
         top: 0;
         width: calc(1280px + sugar.padding(40) * 2);
         border-top-left-radius: 0;
         border-top-right-radius: 0;
+
+        @sugar.media(>=wide) {
+            width: calc(1640px + sugar.padding(40) * 2);
+        }
     }
 
     .s-container {
