--- a/packages/websites/coffeekraken-io/src/views/pages/homepage/welcome/welcome.css
+++ b/packages/websites/coffeekraken-io/src/views/pages/homepage/welcome/welcome.css
@@ -47,6 +47,10 @@
         width: 1280px;
         transform: translate(-50%, -50%);
 
+        @sugar.media >=wide {
+            width: 1640px;
+        }
+
         @sugar.media mobile {
             position: relative;
             top: 0; left: 0;
