--- a/packages/components/s-slider-component/index.html
+++ b/packages/components/s-slider-component/index.html
@@ -29,6 +29,21 @@
             <div s-slider-item>
                 <img src="https://picsum.photos/800/450/?randomef" />
             </div>
+            <!-- <div s-slider-item>
+                <img src="https://picsum.photos/800/450/?random3r3" />
+            </div>
+            <div s-slider-item>
+                <img src="https://picsum.photos/800/450/?randowfwefwefm" />
+            </div> -->
+        </s-slider>
+
+        <s-slider>
+            <div s-slider-item>
+                <img src="https://picsum.photos/800/450/?randomf" />
+            </div>
+            <div s-slider-item>
+                <img src="https://picsum.photos/800/450/?randomef" />
+            </div>
             <div s-slider-item>
                 <img src="https://picsum.photos/800/450/?random3r3" />
             </div>
