--- a/packages/components/s-slider-component/index.html
+++ b/packages/components/s-slider-component/index.html
@@ -19,6 +19,13 @@
             define();
         </script>
 
+        <style>
+            s-slider {
+                margin-left: 100px;
+                display: block;
+            }
+        </style>
+
         <br />
         <br />
 
