--- a/packages/components/s-slider-component/index.html
+++ b/packages/components/s-slider-component/index.html
@@ -44,7 +44,7 @@
             </div> -->
         </s-slider>
 
-        <s-slider>
+        <s-slider direction="vertical">
             <div s-slider-item>
                 <img src="https://picsum.photos/800/450/?randomf" />
             </div>
