--- a/packages/components/s-slider-component/src/css/s-slider-component.css
+++ b/packages/components/s-slider-component/src/css/s-slider-component.css
@@ -2,10 +2,13 @@
     display: block;
     background: red;
     overflow: hidden;
-    @sugar.scrollbar($size: 0);
+    width: 100%; height: 100%;
 
     [direction="horizontal"][scrollable] & {
         transform: translateX(0);
+    }
+    [direction="vertical"][scrollable] & {
+        transform: translateY(0);
     }
 
     .s-slider__items {
@@ -13,11 +16,18 @@
         flex-basis: 100%;
         background: green;
         user-select: none;
+        width: 100%; height: 100%;
+
+        [direction="vertical"] & {
+            flex-direction: column;
+        }
+
     }
 
     .s-slider__item {
         flex-shrink: 0;
-        width: calc(100% - var(--s-slider-side-reveal, 0%) * 2);
+        width: calc(100% - var(--s-slider-inline-reveal, 0%) * 2);
+        height: calc(100% - var(--s-slider-block-reveal, 0%) * 2);
         /* scroll-snap-align: center; */
     }
 
