--- a/packages/components/s-slider-component/index.html
+++ b/packages/components/s-slider-component/index.html
@@ -36,15 +36,16 @@
             <div s-slider-item>
                 <img src="https://picsum.photos/800/450/?randomef" />
             </div>
-            <!-- <div s-slider-item>
+            <div s-slider-item>
                 <img src="https://picsum.photos/800/450/?random3r3" />
             </div>
             <div s-slider-item>
                 <img src="https://picsum.photos/800/450/?randowfwefwefm" />
-            </div> -->
+            </div>
+            <div s-slider-nav></div>
         </s-slider>
 
-        <s-slider direction="vertical">
+        <!-- <s-slider direction="vertical">
             <div s-slider-item>
                 <img src="https://picsum.photos/800/450/?randomf" />
             </div>
@@ -72,7 +73,7 @@
             <div s-slider-item>
                 <img src="https://picsum.photos/800/450/?randowfwefwefm" />
             </div>
-        </s-slider>
+        </s-slider> -->
 
     </body>
 </html>
