--- a/packages/components/s-slider-component/index.html
+++ b/packages/components/s-slider-component/index.html
@@ -5,18 +5,16 @@
         <link rel="icon" href="/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Slider component</title>
-
-        <!-- <link
-            rel="stylesheet"
-            href="http://coffeekraken.io/dist/css/style.css"
-        /> -->
     </head>
     <body>
         <script type="module">
             import __css from './src/css/dev.css';
             import { define } from './src/js/index.ts';
+            import __SSliderSlideableBehavior from './src/js/behaviors/SSliderSlideableBehavior.ts';
 
-            define();
+            define({
+                behavior: new __SSliderSlideableBehavior()
+            });
         </script>
 
         <style>
@@ -30,47 +28,47 @@
         <br />
 
         <s-slider>
-            <div s-slider-item>
+            <div s-slider-slide>
                 <img src="https://picsum.photos/800/450/?randomf" />
             </div>
-            <div s-slider-item>
+            <div s-slider-slide>
                 <img src="https://picsum.photos/800/450/?randomef" />
             </div>
-            <div s-slider-item>
+            <div s-slider-slide>
                 <img src="https://picsum.photos/800/450/?random3r3" />
             </div>
-            <div s-slider-item>
+            <div s-slider-slide>
                 <img src="https://picsum.photos/800/450/?randowfwefwefm" />
             </div>
             <div s-slider-nav></div>
         </s-slider>
 
         <!-- <s-slider direction="vertical">
-            <div s-slider-item>
+            <div s-slider-slide>
                 <img src="https://picsum.photos/800/450/?randomf" />
             </div>
-            <div s-slider-item>
+            <div s-slider-slide>
                 <img src="https://picsum.photos/800/450/?randomef" />
             </div>
-            <div s-slider-item>
+            <div s-slider-slide>
                 <img src="https://picsum.photos/800/450/?random3r3" />
             </div>
-            <div s-slider-item>
+            <div s-slider-slide>
                 <img src="https://picsum.photos/800/450/?randowfwefwefm" />
             </div>
         </s-slider>
 
         <s-slider side-reveal="50px" scrollable>
-            <div s-slider-item>
+            <div s-slider-slide>
                 <img src="https://picsum.photos/800/450/?randomf" />
             </div>
-            <div s-slider-item>
+            <div s-slider-slide>
                 <img src="https://picsum.photos/800/450/?randomef" />
             </div>
-            <div s-slider-item>
+            <div s-slider-slide>
                 <img src="https://picsum.photos/800/450/?random3r3" />
             </div>
-            <div s-slider-item>
+            <div s-slider-slide>
                 <img src="https://picsum.photos/800/450/?randowfwefwefm" />
             </div>
         </s-slider> -->
