--- a/packages/components/s-slider-component/src/css/dev.css
+++ b/packages/components/s-slider-component/src/css/dev.css
@@ -3,7 +3,12 @@
 
 s-slider {
     width: 50%;
+    display: none;
 }
+s-slider[mounted] {
+    display: block;
+}
+
 s-slider[direction="vertical"] {
     height: 400px;
 }
