--- a/packages/components/s-slider-component/index.html
+++ b/packages/components/s-slider-component/index.html
@@ -17,13 +17,6 @@
             });
         </script>
 
-        <style>
-            s-slider {
-                margin-left: 100px;
-                display: block;
-            }
-        </style>
-
         <br />
         <br />
 
@@ -43,7 +36,7 @@
             <div s-slider-nav></div>
         </s-slider>
 
-        <!-- <s-slider direction="vertical">
+        <s-slider class="cards">
             <div s-slider-slide>
                 <img src="https://picsum.photos/800/450/?randomf" />
             </div>
@@ -58,6 +51,7 @@
             </div>
         </s-slider>
 
+        <!--
         <s-slider side-reveal="50px" scrollable>
             <div s-slider-slide>
                 <img src="https://picsum.photos/800/450/?randomf" />
