--- a/packages/components/s-slider-component/src/css/dev.css
+++ b/packages/components/s-slider-component/src/css/dev.css
@@ -1,13 +1,31 @@
 @sugar.init;
 /* @sugar.classes; */
 
+body {
+    overflow: hidden;
+}
+
+.s-slider {
+    max-width: 100vw;
+    overflow: hidden;
+}
+
 .s-slider {
     width: 800px;
     height: 450px;
     display: none;
     margin: 0 auto;
     margin-bottom: 50px;
+    position: relative;
 }
+
+.s-slider__nav {
+        position: absolute;
+        bottom: 20px; left: 50%;
+        transform: translate(-50%);
+        background: red;
+    }
+
 s-slider[mounted] .s-slider {
     display: block;
 }
@@ -21,6 +39,11 @@ s-slider.cards .s-slider {
     }
     .s-slider__slide {
         /* perspective: 800px; */
+
+        img {
+            border-radius: 10px;
+            overflow: hidden;
+        }
 
         /* &.active{
             img {
