--- a/packages/components/s-slider-component/index.html
+++ b/packages/components/s-slider-component/index.html
@@ -20,7 +20,7 @@
         <br />
         <br />
 
-        <s-slider>
+        <s-slider controls>
             <div s-slider-slide="welcome-1">
                 <img src="https://picsum.photos/800/450/?randomf" />
             </div>
@@ -34,10 +34,10 @@
                 <img src="https://picsum.photos/800/450/?randowfwefwefm" />
             </div>
 
-            <div s-slider-nav="welcome-1">Go to slide 1</div>
-            <div s-slider-nav="plop">Go to slide plop</div>
-            <div s-slider-nav="welcome-2">Go to slide 2</div>
-            <div s-slider-nav="welcome-3">Go to slide 3</div>
+            <div s-slider-nav="welcome-1"></div>
+            <div s-slider-nav="plop"></div>
+            <div s-slider-nav="welcome-2"></div>
+            <div s-slider-nav="welcome-3"></div>
 
             <!-- <div s-slider-nav="plop">Go to slide 1</div>
             <div s-slider-nav></div> -->
