--- a/packages/components/s-slider-component/src/css/dev.css
+++ b/packages/components/s-slider-component/src/css/dev.css
@@ -5,26 +5,14 @@ body {
     overflow: hidden;
 }
 
-.s-slider {
-    max-width: 100vw;
-    overflow: hidden;
-}
-
-.s-slider {
+s-slider {
     width: 800px;
-    height: 450px;
-    display: none;
     margin: 0 auto;
     margin-bottom: 50px;
-    position: relative;
 }
 
-.s-slider__nav {
-        position: absolute;
-        bottom: 20px; left: 50%;
-        transform: translate(-50%);
-        background: red;
-    }
+.s-slider {
+}
 
 s-slider[mounted] .s-slider {
     display: block;
