--- a/packages/components/s-slider-component/src/css/s-slider-component.css
+++ b/packages/components/s-slider-component/src/css/s-slider-component.css
@@ -1,4 +1,123 @@
 s-slider,
 .s-slider {
     display: block;
+    font-size: sugar.scalable(1rem);
+}
+
+s-slider[lnf="default"] {
+    position: relative;
+    padding-bottom: calc(sugar.margin(30) + 0.5em);
+
+    &[mounted] {
+        display: block;
+    }
+
+    .s-slider {
+        aspect-ratio: 16/9;
+        position: relative;
+    }
+
+    .s-slider__slides-wrapper {
+        overflow: hidden;
+        border-radius: sugar.theme(ui.slider.borderRadius);
+    }
+
+    .s-slider__slides {
+        display: flex;
+        flex-basis: 100%;
+        user-select: none;
+        width: 100%; height: 100%;
+
+        [direction="vertical"] & {
+            flex-direction: column;
+        }
+    }
+
+    .s-slider__slide {
+        flex-shrink: 0;
+        width: calc(100% - var(--s-slider-inline-reveal, 0%) * 2);
+        height: calc(100% - var(--s-slider-block-reveal, 0%) * 2);
+    }
+
+    .s-slider__nav {
+        position: absolute;
+        top: calc(100% + sugar.margin(30)); left: 50%;
+        transform: translate(-50%);
+        display: flex;
+        gap: sugar.margin(10);
+
+        > * {
+            border-radius: 50%;
+            display: block;
+            width: 0.5em;
+            height: 0.5em;
+            background: sugar.color(current);
+            opacity: 0.3;
+            transition: sugar.theme(ui.slider.transition);
+            cursor: pointer;
+
+            &:hover {
+                opacity: 0.6;
+            }
+            &.active {
+                opacity: 1;
+            }
+        }
+    }
+
+    .s-slider__controls {
+
+    }
+
+    .s-slider__controls-next,
+    .s-slider__controls-previous {
+        width: 1em; height: 1em;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        cursor: pointer;
+        opacity: 0.3;
+        pointer-events: none;
+
+        &.active {
+            pointer-events: all;
+            opacity: 1;
+        }
+    }
+    .s-slider__controls-previous {
+        left: sugar.margin(30);
+    }
+    .s-slider__controls-next {
+        right: sugar.margin(30);
+    }
+
+    .s-slider__controls-next-arrow,
+    .s-slider__controls-previous-arrow {
+        width: 1em; height: 1em;
+        position: absolute;
+        top: 0; left: 0;
+        
+        &:before,
+        &:after {
+            display: block;
+            content: '';
+            position: absolute;
+            top: calc(50% - 0.1em); left: 0;
+            background: sugar.color(current);
+            width: 100%; height: 0.2em;
+        }
+        &:before {
+            transform-origin: 0 0;
+            transform: rotate(45deg);
+        }
+        &:after {
+            transform-origin: 0 100%;
+            transform: rotate(-45deg);
+        }
+    }
+    .s-slider__controls-next-arrow {
+        transform: rotate(180deg);
+    }
+
+
 }
