--- a/packages/components/s-slider-component/index.html
+++ b/packages/components/s-slider-component/index.html
@@ -20,57 +20,209 @@
         <br />
         <br />
 
-        <s-slider controls>
-            <div s-slider-slide="welcome-1">
-                <img src="https://picsum.photos/800/450/?randomf" />
-            </div>
-            <div s-slider-slide="welcome-2">
-                <img src="https://picsum.photos/800/450/?randomef" />
-            </div>
-            <div s-slider-slide="welcome-3">
-                <img src="https://picsum.photos/800/450/?random3r3" />
-            </div>
-            <div s-slider-slide="plop">
-                <img src="https://picsum.photos/800/450/?randowfwefwefm" />
-            </div>
+        <h1>Default controls nav</h1>
 
-            <div s-slider-nav="welcome-1"></div>
-            <div s-slider-nav="plop"></div>
-            <div s-slider-nav="welcome-2"></div>
-            <div s-slider-nav="welcome-3"></div>
-
-            <!-- <div s-slider-nav="plop">Go to slide 1</div>
-            <div s-slider-nav></div> -->
+        <s-slider controls nav>
+            <div s-slider-slide class="s-bg--accent">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
+            </div>
+            <div s-slider-slide class="s-bg--complementary">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
+            </div>
+            <div s-slider-slide class="s-bg--info">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
+            </div>
+            <div s-slider-slide class="s-bg--error">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
+            </div>
         </s-slider>
 
-        <s-slider class="cards">
-            <div s-slider-slide>
-                <img src="https://picsum.photos/800/450/?randomf" />
+        <h1>Default tight controls nav</h1>
+
+        <s-slider lnf="default-tight" controls nav>
+            <div s-slider-slide class="s-bg--accent">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
             </div>
-            <div s-slider-slide>
-                <img src="https://picsum.photos/800/450/?randomef" />
+            <div s-slider-slide class="s-bg--complementary">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
             </div>
-            <div s-slider-slide>
-                <img src="https://picsum.photos/800/450/?random3r3" />
+            <div s-slider-slide class="s-bg--info">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
             </div>
-            <div s-slider-slide>
-                <img src="https://picsum.photos/800/450/?randowfwefwefm" />
+            <div s-slider-slide class="s-bg--error">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
+            </div>
+        </s-slider>
+
+        <h1>Default contained controls nav</h1>
+
+        <s-slider lnf="default-contained" controls nav>
+            <div s-slider-slide class="s-bg--accent">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
+            </div>
+            <div s-slider-slide class="s-bg--complementary">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
+            </div>
+            <div s-slider-slide class="s-bg--info">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
+            </div>
+            <div s-slider-slide class="s-bg--error">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
+            </div>
+        </s-slider>
+
+        <h1>Default vertical controls nav</h1>
+
+        <s-slider direction="vertical" controls nav>
+            <div s-slider-slide class="s-bg--accent">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
+            </div>
+            <div s-slider-slide class="s-bg--complementary">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
+            </div>
+            <div s-slider-slide class="s-bg--info">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
+            </div>
+            <div s-slider-slide class="s-bg--error">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
+            </div>
+        </s-slider>
+
+        <h1>Default tight vertical controls nav</h1>
+
+        <s-slider lnf="default-tight" direction="vertical" controls nav>
+            <div s-slider-slide class="s-bg--accent">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
+            </div>
+            <div s-slider-slide class="s-bg--complementary">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
+            </div>
+            <div s-slider-slide class="s-bg--info">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
+            </div>
+            <div s-slider-slide class="s-bg--error">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
+            </div>
+        </s-slider>
+
+        <h1>Default contained vertical controls nav</h1>
+
+        <s-slider lnf="default-contained" direction="vertical" controls nav>
+            <div s-slider-slide class="s-bg--accent">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
+            </div>
+            <div s-slider-slide class="s-bg--complementary">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
+            </div>
+            <div s-slider-slide class="s-bg--info">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
+            </div>
+            <div s-slider-slide class="s-bg--error">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
+            </div>
+        </s-slider>
+
+        <h1>Default loop progress controls nav</h1>
+         <s-slider lnf="default" loop progress controls nav>
+            <div s-slider-slide class="s-bg--accent">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
+            </div>
+            <div s-slider-slide class="s-bg--complementary">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
+            </div>
+            <div s-slider-slide class="s-bg--info">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
+            </div>
+            <div s-slider-slide class="s-bg--error">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
+            </div>
+        </s-slider>
+
+        <h1>Default timer loop progress controls nav</h1>
+         <s-slider lnf="default" timer="2500" loop progress controls nav>
+            <div s-slider-slide class="s-bg--accent">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
+            </div>
+            <div s-slider-slide class="s-bg--complementary">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
+            </div>
+            <div s-slider-slide class="s-bg--info">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
+            </div>
+            <div s-slider-slide class="s-bg--error">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
+            </div>
+        </s-slider>
+
+        <h1>Default contained loop controls nav</h1>
+         <s-slider lnf="default" loop controls nav>
+            <div s-slider-slide class="s-bg--accent">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
+            </div>
+            <div s-slider-slide class="s-bg--complementary">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
+            </div>
+            <div s-slider-slide class="s-bg--info">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
+            </div>
+            <div s-slider-slide class="s-bg--error">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
             </div>
         </s-slider>
 
         <!--
         <s-slider side-reveal="50px" scrollable>
-            <div s-slider-slide>
-                <img src="https://picsum.photos/800/450/?randomf" />
+            <div s-slider-slide class="s-bg--accent">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
             </div>
-            <div s-slider-slide>
-                <img src="https://picsum.photos/800/450/?randomef" />
+            <div s-slider-slide class="s-bg--complementary">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
             </div>
-            <div s-slider-slide>
-                <img src="https://picsum.photos/800/450/?random3r3" />
+            <div s-slider-slide class="s-bg--info">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
             </div>
-            <div s-slider-slide>
-                <img src="https://picsum.photos/800/450/?randowfwefwefm" />
+            <div s-slider-slide class="s-bg--error">
+                <h1 class="s-typo--h1">Slide #1</h1>
+                <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
             </div>
         </s-slider> -->
 
