--- a/packages/components/s-slider-component/index.html
+++ b/packages/components/s-slider-component/index.html
@@ -30,7 +30,7 @@
 
         <h1>Default controls nav</h1>
 
-        <s-slider controls nav>
+        <s-slider controls nav swipe>
             <div s-slider-slide class="s-bg--accent">
                 <h1 class="s-typo--h1">Slide #1</h1>
                 <p class="s-typo s-typo--p">iowfj woijf iowj foiwj fiowjofijw oiefjw </p>
