--- a/packages/websites/coffeekraken-io/src/css/sugar.css
+++ b/packages/websites/coffeekraken-io/src/css/sugar.css
@@ -49,6 +49,7 @@
   fa:file-archive
   fa:file
   fs:src/icons/coffeekraken/link/link-broken.svg
+  fs:src/icons/coffeekraken/link/link-broken-solid.svg
   fs:src/icons/coffeekraken/lang/lang-js.svg
   fs:src/icons/coffeekraken/lang/lang-ts.svg
   fs:src/icons/coffeekraken/lang/lang-css.svg
