--- a/packages/websites/coffeekraken-io/src/fonts/sugar-icons/sugar-fonticon.css
+++ b/packages/websites/coffeekraken-io/src/fonts/sugar-icons/sugar-fonticon.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: "sugar-fonticon";
-    src: url("./sugar-fonticon.eot?eb82ddd76f5710917fee5584e58f90f8#iefix") format("embedded-opentype"),
-url("./sugar-fonticon.woff2?eb82ddd76f5710917fee5584e58f90f8") format("woff2"),
-url("./sugar-fonticon.woff?eb82ddd76f5710917fee5584e58f90f8") format("woff");
+    src: url("/dist/fonts/sugar-icons/sugar-fonticon.eot?1b0c2be6b1872f1c78b6837720463de0#iefix") format("embedded-opentype"),
+url("/dist/fonts/sugar-icons/sugar-fonticon.woff2?1b0c2be6b1872f1c78b6837720463de0") format("woff2"),
+url("/dist/fonts/sugar-icons/sugar-fonticon.woff?1b0c2be6b1872f1c78b6837720463de0") format("woff");
 }
 
-.s-icon--align:before,.s-icon--autocomplete:before,.s-icon--avatar:before,.s-icon--brand-coffeekraken:before,.s-icon--brand-lit:before,.s-icon--brand-nextjs:before,.s-icon--brand-opensource:before,.s-icon--build:before,.s-icon--button:before,.s-icon--code:before,.s-icon--colors:before,.s-icon--copy:before,.s-icon--datepicker:before,.s-icon--display-preview:before,.s-icon--dropdown:before,.s-icon--easing:before,.s-icon--file-css:before,.s-icon--file-html:before,.s-icon--file-js:before,.s-icon--file-md:before,.s-icon--file-php:before,.s-icon--file-ts:before,.s-icon--flex:before,.s-icon--folder-opened:before,.s-icon--folder:before,.s-icon--helpers:before,.s-icon--lang-css:before,.s-icon--lang-html:before,.s-icon--lang-js:before,.s-icon--lang-md:before,.s-icon--lang-php:before,.s-icon--lang-ts:before,.s-icon--layout:before,.s-icon--link-broken:before,.s-icon--loader:before,.s-icon--more:before,.s-icon--radius:before,.s-icon--range:before,.s-icon--ratio:before,.s-icon--refresh:before,.s-icon--scale:before,.s-icon--space:before,.s-icon--support-chromium:before,.s-icon--support-edge:before,.s-icon--support-firefox:before,.s-icon--support-rtl:before,.s-icon--support-safari:before,.s-icon--switch:before,.s-icon--theme:before,.s-icon--tooltip:before,.s-icon--typography:before,.s-icon--visibility:before,.s-icon--vue:before {
+.s-icon--align:before,.s-icon--autocomplete:before,.s-icon--avatar:before,.s-icon--brand-coffeekraken:before,.s-icon--brand-lit:before,.s-icon--brand-nextjs:before,.s-icon--brand-opensource:before,.s-icon--build:before,.s-icon--button:before,.s-icon--code:before,.s-icon--colors:before,.s-icon--copy:before,.s-icon--datepicker:before,.s-icon--display-preview:before,.s-icon--dropdown:before,.s-icon--easing:before,.s-icon--file-css:before,.s-icon--file-html:before,.s-icon--file-js:before,.s-icon--file-md:before,.s-icon--file-php:before,.s-icon--file-ts:before,.s-icon--flex:before,.s-icon--folder-opened:before,.s-icon--folder:before,.s-icon--helpers:before,.s-icon--lang-css:before,.s-icon--lang-html:before,.s-icon--lang-js:before,.s-icon--lang-md:before,.s-icon--lang-php:before,.s-icon--lang-ts:before,.s-icon--layout:before,.s-icon--link-broken-solid:before,.s-icon--link-broken:before,.s-icon--loader:before,.s-icon--more:before,.s-icon--radius:before,.s-icon--range:before,.s-icon--ratio:before,.s-icon--refresh:before,.s-icon--scale:before,.s-icon--space:before,.s-icon--support-chromium:before,.s-icon--support-edge:before,.s-icon--support-firefox:before,.s-icon--support-rtl:before,.s-icon--support-safari:before,.s-icon--switch:before,.s-icon--theme:before,.s-icon--tooltip:before,.s-icon--typography:before,.s-icon--visibility:before,.s-icon--vue:before {
 position: relative;
 
     font-family: sugar-fonticon !important;
@@ -117,67 +117,70 @@ position: relative;
 .s-icon--layout:before {
     content: "\f121";
 }
-.s-icon--link-broken:before {
+.s-icon--link-broken-solid:before {
     content: "\f122";
 }
-.s-icon--loader:before {
+.s-icon--link-broken:before {
     content: "\f123";
 }
-.s-icon--more:before {
+.s-icon--loader:before {
     content: "\f124";
 }
-.s-icon--radius:before {
+.s-icon--more:before {
     content: "\f125";
 }
-.s-icon--range:before {
+.s-icon--radius:before {
     content: "\f126";
 }
-.s-icon--ratio:before {
+.s-icon--range:before {
     content: "\f127";
 }
-.s-icon--refresh:before {
+.s-icon--ratio:before {
     content: "\f128";
 }
-.s-icon--scale:before {
+.s-icon--refresh:before {
     content: "\f129";
 }
-.s-icon--space:before {
+.s-icon--scale:before {
     content: "\f12a";
 }
-.s-icon--support-chromium:before {
+.s-icon--space:before {
     content: "\f12b";
 }
-.s-icon--support-edge:before {
+.s-icon--support-chromium:before {
     content: "\f12c";
 }
-.s-icon--support-firefox:before {
+.s-icon--support-edge:before {
     content: "\f12d";
 }
-.s-icon--support-rtl:before {
+.s-icon--support-firefox:before {
     content: "\f12e";
 }
-.s-icon--support-safari:before {
+.s-icon--support-rtl:before {
     content: "\f12f";
 }
-.s-icon--switch:before {
+.s-icon--support-safari:before {
     content: "\f130";
 }
-.s-icon--theme:before {
+.s-icon--switch:before {
     content: "\f131";
 }
-.s-icon--tooltip:before {
+.s-icon--theme:before {
     content: "\f132";
 }
-.s-icon--typography:before {
+.s-icon--tooltip:before {
     content: "\f133";
 }
-.s-icon--visibility:before {
+.s-icon--typography:before {
     content: "\f134";
 }
-.s-icon--vue:before {
+.s-icon--visibility:before {
     content: "\f135";
 }
-.s-icon--align,.s-icon--autocomplete,.s-icon--avatar,.s-icon--brand-coffeekraken,.s-icon--brand-lit,.s-icon--brand-nextjs,.s-icon--brand-opensource,.s-icon--build,.s-icon--button,.s-icon--code,.s-icon--colors,.s-icon--copy,.s-icon--datepicker,.s-icon--display-preview,.s-icon--dropdown,.s-icon--easing,.s-icon--file-css,.s-icon--file-html,.s-icon--file-js,.s-icon--file-md,.s-icon--file-php,.s-icon--file-ts,.s-icon--flex,.s-icon--folder-opened,.s-icon--folder,.s-icon--helpers,.s-icon--lang-css,.s-icon--lang-html,.s-icon--lang-js,.s-icon--lang-md,.s-icon--lang-php,.s-icon--lang-ts,.s-icon--layout,.s-icon--link-broken,.s-icon--loader,.s-icon--more,.s-icon--radius,.s-icon--range,.s-icon--ratio,.s-icon--refresh,.s-icon--scale,.s-icon--space,.s-icon--support-chromium,.s-icon--support-edge,.s-icon--support-firefox,.s-icon--support-rtl,.s-icon--support-safari,.s-icon--switch,.s-icon--theme,.s-icon--tooltip,.s-icon--typography,.s-icon--visibility,.s-icon--vue {
+.s-icon--vue:before {
+    content: "\f136";
+}
+.s-icon--align,.s-icon--autocomplete,.s-icon--avatar,.s-icon--brand-coffeekraken,.s-icon--brand-lit,.s-icon--brand-nextjs,.s-icon--brand-opensource,.s-icon--build,.s-icon--button,.s-icon--code,.s-icon--colors,.s-icon--copy,.s-icon--datepicker,.s-icon--display-preview,.s-icon--dropdown,.s-icon--easing,.s-icon--file-css,.s-icon--file-html,.s-icon--file-js,.s-icon--file-md,.s-icon--file-php,.s-icon--file-ts,.s-icon--flex,.s-icon--folder-opened,.s-icon--folder,.s-icon--helpers,.s-icon--lang-css,.s-icon--lang-html,.s-icon--lang-js,.s-icon--lang-md,.s-icon--lang-php,.s-icon--lang-ts,.s-icon--layout,.s-icon--link-broken-solid,.s-icon--link-broken,.s-icon--loader,.s-icon--more,.s-icon--radius,.s-icon--range,.s-icon--ratio,.s-icon--refresh,.s-icon--scale,.s-icon--space,.s-icon--support-chromium,.s-icon--support-edge,.s-icon--support-firefox,.s-icon--support-rtl,.s-icon--support-safari,.s-icon--switch,.s-icon--theme,.s-icon--tooltip,.s-icon--typography,.s-icon--visibility,.s-icon--vue {
 display: inline-block;
 line-height: 1;
 width: 1em;
