--- a/packages/websites/coffeekraken-io/src/css/generic/ck-settings.css
+++ b/packages/websites/coffeekraken-io/src/css/generic/ck-settings.css
@@ -7,7 +7,7 @@
     max-width: 500px;
     overflow-y: scroll;
     @sugar.scrollbar();
-    @sugar.depth (100);
+    /* @sugar.depth (100); */
 
     @sugar.media mobile {
         min-width: 80%;
