--- a/packages/websites/coffeekraken-io/src/views/layouts/header/header.css
+++ b/packages/websites/coffeekraken-io/src/views/layouts/header/header.css
@@ -13,20 +13,26 @@
     align-items: center;
     background: sugar.color(main, --alpha 0);
     transition: all sugar.theme(easing.default) 0.6s;
-    @sugar.depth (10);
-    background: sugar.color(main, surface);
+    @sugar.depth (5);
+    /* background: sugar.color(main, background, --alpha 0.7); */
     border-radius: sugar.border.radius();
+    backdrop-filter: blur(10px);
     /* box-shadow: 5px 20px 30px rgba(0, 0, 0, 0.03); */
-    background: linear-gradient(
+    /* background: linear-gradient(
         90deg,
         sugar.color(main, --darken 46),
         sugar.color(main, --darken 48)
     );
-    background: linear-gradient(
-        90deg,
-        sugar.color(main, surface),
-        sugar.color(main, surface)
-    );
+     */
+    background: sugar.color(main, background, --alpha 0.9);
+
+    @sugar.theme.when dark {
+        background: linear-gradient(
+            90deg,
+            sugar.color(main, surface, --alpha 0.8),
+            sugar.color(main, background)
+        );
+    }
 
     .__body {
         order: 10;
@@ -34,7 +40,7 @@
         align-items: center;
     }
 
-    @sugar.media(>=wide) {
+    @sugar.media (>=wide) {
         width: calc(1640px + sugar.padding(30) * 2);
     }
 
@@ -46,7 +52,7 @@
         border-top-left-radius: 0;
         border-top-right-radius: 0;
 
-        @sugar.media(>=wide) {
+        @sugar.media (>=wide) {
             width: 100%;
         }
     }
@@ -55,22 +61,20 @@
         flex-grow: 1;
     }
 
-
     .__logo {
         width: 140px;
 
         svg {
             height: 40px;
-            width:140px;
+            width: 140px;
             transform-origin: 0 50%;
-            transform: translate(-10px,0px);
-            
+            transform: translate(-10px, 0px);
+
             @sugar.media mobile {
                 position: relative;
                 top: 0;
             }
         }
-
 
         svg .main {
             fill: sugar.color(base, --darken 55);
@@ -80,7 +84,7 @@
         }
     }
 
-    @sugar.theme.when(dark) {
+    @sugar.theme.when (dark) {
         svg .main {
             fill: sugar.color(main, text);
         }
@@ -91,12 +95,15 @@
 
     .__menu-icon {
         position: relative;
-        width: 16px; height: 16px;
+        width: 16px;
+        height: 16px;
         display: inline-block;
 
-        .__open, .__close {
+        .__open,
+        .__close {
             position: absolute;
-            top: 0; left: 0;
+            top: 0;
+            left: 0;
         }
 
         .__open {
@@ -121,5 +128,4 @@
             }
         }
     }
-
 }
