--- a/packages/websites/coffeekraken-io/src/css/generic/icon-card.css
+++ b/packages/websites/coffeekraken-io/src/css/generic/icon-card.css
@@ -4,13 +4,16 @@
     display: block;
     width: 100%;
     border-radius: sugar.border.radius();
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
     transition: sugar.transition();
     z-index: 1;
 
-    &:hover {
-        box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
-        z-index: 0;
+    @sugar.theme.when dark {
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+
+        &:hover {
+            box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
+            z-index: 0;
+        }
     }
 
     .icon-card__content {
@@ -31,7 +34,6 @@
 
     &:before {
         content: '';
-        display: block;
         position: absolute;
         top: 0;
         left: 0;
@@ -44,7 +46,12 @@
     }
     &:hover:before {
         filter: blur(30px);
-        opacity: 1;
+        opacity: 0.3;
+    }
+    @sugar.theme.when dark {
+        &:hover:before {
+            opacity: 1;
+        }
     }
 
     i,
