--- a/packages/components/s-code-example-component/src/css/s-code-example.css
+++ b/packages/components/s-code-example-component/src/css/s-code-example.css
@@ -14,6 +14,8 @@
             display: block;
         }
     }
+
+    @sugar.rhythm.vertical (ui.codeExample.rhythmVertical);
 }
 
 .hljs {
@@ -39,7 +41,7 @@
 
 .s-code-example__content {
     position: relative;
-    --paddingBlock: sugar.padding(ui.code.paddingBlock);
+    --paddingBlock: sugar.padding(ui.codeExample.paddingBlock);
     overflow: hidden;
 
     .s-code-example[lines] & {
@@ -53,10 +55,10 @@
         --paddingBlock: calc(var(--paddingBlock) * 0.5);
     }
 }
-:not([bare]) .s-code-example__content {
-    transition: sugar.theme(ui.code.transition);
-    border-radius: sugar.border.radius(ui.code.borderRadius);
-    @sugar.depth (sugar.theme.value(ui.code.depth));
+[lnf='default'] .s-code-example__content {
+    transition: sugar.theme(ui.codeExample.transition);
+    border-radius: sugar.border.radius(ui.codeExample.borderRadius);
+    @sugar.depth (sugar.theme.value(ui.codeExample.depth));
 }
 
 .s-code-example__more-bar {
@@ -75,7 +77,7 @@
         pointer-events: all;
     }
 }
-:not([bare]) .s-code-example__more-bar {
+.s-code-example__more-bar {
     text-align: center;
     padding-inline: sugar.padding(ui.default.paddingInline);
     padding-block: sugar.padding(ui.default.paddingBlock);
