--- a/packages/app/s-dashboard/src/js/partials/s-dashboard-pages-component/s-dashboard-pages-component.css
+++ b/packages/app/s-dashboard/src/js/partials/s-dashboard-pages-component/s-dashboard-pages-component.css
@@ -1,4 +1,15 @@
 .s-dashboard-pages {
+    .s-filtrable-input {
+        max-height: calc(100vh - 200px);
+
+        &__dropdown {
+            margin-block-start: sugar.margin(20);
+        }
+        &__list {
+            @sugar.scrollbar();
+        }
+    }
+
     .s-highlight {
         background: sugar.color(accent);
         color: black;
