--- a/packages/app/s-dashboard/src/css/sugar.css
+++ b/packages/app/s-dashboard/src/css/sugar.css
@@ -5,7 +5,7 @@
     @sugar.classes;
 }
 
-@sugar.ui.filtrableinput.classes;
+/* @sugar.ui.filtrableinput.classes; */
 
 @sugar.icon.classes (
   fa:check:success
